fix(Country Risk): audit versions and upgrade vulnerability